--- a/index-3.html
+++ b/index-3.html
@@ -38,7 +38,7 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
+              <a href="index-3.html">
                 <span class="glyphicon glyphicon-home"></span> Home</a>
             </li>
             <li id="navMenuButton">
@@ -103,6 +103,6 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/ajax-utils.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script-1.js"></script>
 </body>
 </html>
