--- a/index-3.html
+++ b/index-3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Chu's China Bistro</title>
+    <link rel="icon" href="restraunt-logo.png" type="image/png" sizes="16×16">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -22,7 +23,7 @@
           <div class="navbar-brand">
             <a href="index-3.html"><h1>David Chu's China Bistro</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <img src="star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>
           </div>
